feat: add Connection port