@@ -12,57 +12,36 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-
 import com.google.gson.Gson;
 
+import javax.net.ssl.HttpsURLConnection;
 import java.io.InputStreamReader;
 
 public class UserLoginController {
-    public person person;
-    public login login;
-
-
+	private final Connection connection;
     public UserLoginController(login login) throws IOException {
-
+		connection = new Connection();
     }
-
-
     public void getUserByEmail(String email) throws IOException {
-		
-		try {
-			String encodedEmail = URLEncoder.encode(email, StandardCharsets.UTF_8.toString());
-	        URI uri1 = new URI("http://localhost:8080/user/allUser?personemail=" + encodedEmail);
-			URL url = uri1.toURL();
-	        HttpURLConnection con = (HttpURLConnection) url.openConnection();
-	         con.setRequestMethod("GET");
-	         con.setRequestProperty("Content-Type", "application/json");
-	         con.setConnectTimeout(5000);
-	         con.setReadTimeout(5000);
+        String encodedEmail = URLEncoder.encode(email, StandardCharsets.UTF_8);
+        connection.setUrl(new URL("http://localhost:8080/user/allUser?personemail=" + encodedEmail));
+        connection.openGetConnection();
 
-	         int status = con.getResponseCode();
+        //int status = connection.con.getResponseCode();
 
-	         BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
-	         String inputLine;
-	         StringBuffer content = new StringBuffer();
-	         while ((inputLine = in.readLine()) != null) {
-	         content.append(inputLine);
-	         }
+        BufferedReader in = new BufferedReader(new InputStreamReader(connection.con.getInputStream()));
+        String inputLine;
+        StringBuilder content = new StringBuilder();
+        while ((inputLine = in.readLine()) != null) {
+            content.append(inputLine);
+        }
+        // close connections
+        in.close();
+        connection.closeConnection();
 
-	         // close connections
-	         in.close();
-	         con.disconnect();
-
-	         System.out.println("Response content: " + content.toString());
-
-
-		} catch (URISyntaxException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
-        
-
+        // convert json to object
+		Gson gson = new Gson();
+		person person = gson.fromJson(content.toString(), person.class);
+		System.out.println(person);
     }
-
-
-
 }
